@@ -1,10 +1,10 @@
 package org.example.back.ranking.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.example.back.ranking.dto.RankerDto;
-import org.example.back.ranking.repository.RankerRepository;
+import org.example.back.ranking.dto.RankerResDto;
+import org.example.back.db.repository.RankerRepository;
+import org.example.back.ranking.dto.RankingResDto;
 import org.springframework.stereotype.Service;
 
 import jakarta.persistence.Tuple;
@@ -13,16 +13,16 @@ import lombok.RequiredArgsConstructor;
 @Service
 @RequiredArgsConstructor
 public class RankingService {
-	private final RankerRepository rankerRepository;
+	private final RankerRepository rankRepository;
 
-	public List<RankerDto> getRanking() {
-		List<Tuple> rankerList =  rankerRepository.getTopMembersWithTierInfo();
-		return rankerList.stream().map(
-			ranker -> new RankerDto(
-				ranker.get("nickname", String.class),
-				ranker.get("tierScore", Integer.class),
-				ranker.get("tierName", String.class),
-				ranker.get("tierImage", String.class)
-			)).collect(Collectors.toList());
+	public RankingResDto getRanking() {
+		List<Tuple> rankerList =  rankRepository.getTopMembersWithTierInfo();
+		return new RankingResDto(rankerList.stream().map(
+			ranker -> new RankerResDto(
+			ranker.get("nickname", String.class),
+			ranker.get("tierScore", Integer.class),
+			ranker.get("tierName", String.class),
+			ranker.get("tierImage", String.class)
+			)).toList());
 	}
 }
